Adding Spring security, Swagger, Junit, Mockito, Specification and DTOs